metadata/force-app/main/default/objects/CustomName_FuvNv__c/CustomName_FuvNv__c.object-meta.xml
<CustomObject>
    <description>Description_PfmPp</description>
    <label>CustomLabel_BRPnq</label>
    <nameField>
        <label>CustomLabel_BRPnq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BRPnqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>