metadata/force-app/main/default/objects/CustomName_FuvNv__c/fields/CustomField_jcNDx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jcNDx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTcjNM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>