metadata/force-app/main/default/objects/CustomName_FuvNv__c/fields/CustomField_KsIqi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KsIqi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldikjJz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>